<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch.Vertical"
    android:background="#f1f1f1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBar"
        app:title="@string/user_login"/>

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/MatchWrap.Vertical"
        android:background="@color/common_white"
        android:padding="@dimen/dp_20">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_phone_number"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_normal"
                android:textSize="@dimen/sp_14"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_normal"
                android:textSize="@dimen/sp_14"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/selector_btn_green"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/common_white"
            android:textSize="@dimen/sp_14"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/btn_register"
        style="@style/WrapWrap"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/register_account"/>
</android.support.v7.widget.LinearLayoutCompat>